--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-# ─────────────────────────── requirements.txt ───────────────────────────────
-"""
 streamlit==1.35.0
 pandas
 supabase==2.3.0
-"""
+rich==13.7.0
