--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 streamlit==1.35.0
 pandas
 streamlit-lottie
-rich==13.7.0
+streamlit-extras      # countdown timer + layout helpers
+rich==13.7.0          # pinned to keep Streamlit happy
+supabase==2.3.0       # optional – only needed if you’ll connect to Supabase
